@@ -1,8 +1,8 @@
 package znurgl.ignitetest.worker;
 
-import com.sun.tools.javac.util.List;
 import org.apache.ignite.Ignite;
 import org.apache.ignite.IgniteCache;
+import org.apache.ignite.IgniteTransactions;
 import org.apache.ignite.Ignition;
 import org.apache.ignite.configuration.CacheConfiguration;
 import org.apache.ignite.configuration.IgniteConfiguration;
@@ -12,9 +12,9 @@ import org.apache.ignite.transactions.Transaction;
 import znurgl.ignitetest.data.Event;
 
 import java.sql.Timestamp;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
@@ -22,38 +22,54 @@ import java.util.concurrent.ConcurrentHashMap;
  */
 public class Worker {
 
+    public static void main(String[] args) {
+        new Worker().load();
+    }
+
     public void load() {
 
         IgniteConfiguration cfg = new IgniteConfiguration();
+
+        //cfg.setClientMode(true);
+
         TcpDiscoverySpi discoverySpi = new TcpDiscoverySpi();
 
+        //discoverySpi.setForceServerMode(false);
+
         TcpDiscoveryMulticastIpFinder ipfinder = new TcpDiscoveryMulticastIpFinder();
-        ipfinder.setAddresses(List.of("127.0.0.1:47500..47509"));
+
+        ipfinder.setAddresses( Arrays.asList(
+            "127.0.0.1:47500..47509"
+            ));
 
         discoverySpi.setIpFinder(ipfinder);
 
         cfg.setDiscoverySpi(discoverySpi);
+        System.out.println("start");
+        try(Ignite ignite = Ignition.getOrStart(cfg)) {
 
-        try (Ignite ignite = Ignition.getOrStart(cfg)) {
+            IgniteTransactions transactions = ignite.transactions();
+
 
             CacheConfiguration<UUID, Event> cacheCfg = new CacheConfiguration<>("transtest");
 
+            try(IgniteCache<UUID, Event> cache = ignite.getOrCreateCache(cacheCfg)) {
+                Map<UUID, Event> map = new ConcurrentHashMap<>();
+                try (Transaction tx = transactions.txStart()) {
 
-            try (IgniteCache<UUID, Event> cache = ignite.getOrCreateCache(cacheCfg)) {
-                try (Transaction tx = ignite.transactions().txStart()) {
-
-                    Map<UUID, Event> map = new ConcurrentHashMap<>();
-                    for (int i = 0; i < 1_000_000; i++) {
+                    for (int i = 0; i < 1000; i++) {
                         map.put(UUID.randomUUID(), new Event("name" + i, Timestamp.valueOf(LocalDateTime.now()).getTime(), ""));
                     }
 
-                    //ignite.log().info("cache size before: " + cache.metrics().getSize());
-                    System.out.println("cache size before: " + cache.metrics().getSize());
+                    //System.out.println(cache.metrics().getSize());
                     cache.putAll(map);
+
                     tx.commit();
-                    //ignite.log().info("cache size after: " + cache.metrics().getSize());
-                    System.out.println("cache size after: " + cache.metrics().getSize());
+
+                    //System.out.println(cache.metrics().getSize());
                 }
+                Map<UUID, Event> resp = cache.getAll(map.keySet());
+                System.out.println("loaded: " + resp.size());
             }
         }
     }
